# daidai-panel

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.debian  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  batch_fix_api.py  check_apps.py  create_security_tables.py  migrate_secret.py  pyproject.toml  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  extensions.py  hooks.py
backend/app/api/: __init__.py  api_meta.py  auth.py  config.py  deps.py  envs.py  logs.py  notifications.py  open_api.py  platform_tokens.py  scripts.py  security.py  ssh_keys.py  subscriptions.py  system.py  tasks.py  tasks_batch_stats.py.txt  users.py
backend/app/models/: __init__.py  env_var.py  ip_whitelist.py  log.py  login_attempt.py  login_log.py  notification.py  open_app.py  platform_token.py  script_version.py  security_audit.py  sub_log.py  subscription.py  system_config.py  task.py  token_blocklist.py  two_factor_auth.py  user.py  user_session.py
backend/app/services/: __init__.py  git_service.py  log_manager.py  login_security.py  maintenance.py  notifier.py  rate_limiter.py  resource_monitor.py  scheduler.py  script_runner.py  subscription_service.py  websocket_service.py
backend/app/utils/: command_validator.py  cron_parser.py  crypto.py  env_exporter.py  errors.py  file_lock.py  geetest.py  permissions.py  response.py  sse_token.py  swagger_config.py  validators.py
backend/migrations/versions/: add_env_position.py  add_platform_tokens.py  add_subscription_enhancements.py  add_task_hooks_and_multi_instance.py
(+80 files in other folders)
