[tool.poetry]
name = "daidai-panel"
version = "0.1.0"
description = "呆呆面板 - 定时任务管理面板"
authors = ["DaiDai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0"
flask-sqlalchemy = "^3.1"
flask-migrate = "^4.0"
flask-jwt-extended = "^4.6"
flask-cors = "^4.0"
flask-limiter = "^3.5"
apscheduler = "^3.10"
pydantic = "^2.5"
werkzeug = "^3.0"
gunicorn = "^21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-flask = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
